# toolchains_llvm

./: .bazelrc  .buildifier.json  .gitignore  .travis.yml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  migration.yml  publish.yaml  release.yml  release_notes_template.txt  release_prep.sh  tests.yml
.trunk/: trunk.yaml
.trunk/configs/: .prettierrc.json  .shellcheckrc
docs/: osx-sanitizer-runtime.md
tests/: .bazelrc  .buildifier.json  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE  WORKSPACE.bzlmod  assembly_test.s  boringssl-20260413.0.patch  clang_cpp_test.cc  defs.bzl  file_dependency_test.sh  libxml2_stub_test.sh  main  main.c  msan_libcxx_test.cc  omp_test.c  pthread_link_test.cc  run_tests.sh  simple.cc  stdatomic_test.c  stdlib.cc  stdlib.h  stdlib_test.cc  test_cxx_standard.cc  test_define.cc  transitions.bzl  wasi_sdk.bzl
tests/extra_files/: BUILD.bazel  ignorelist.txt
tests/extra_targets/wasm/: BUILD.bazel  transitions.bzl
tests/gcc_root/: BUILD.bazel
tests/openssl/: BUILD.bazel  MODULE.bazel  openssl.bazel
tests/openssl/crypto/include/internal/: bn_conf.h  dso_conf.h
tests/openssl/include/openssl/: opensslconf.h
tests/openssl/overlay/: BUILD.bazel  utils.bzl
tests/openssl/overlay/configs/: BUILD.bazel
tests/openssl/overlay/test_bazel_build/: BUILD.bazel  sha256_test.cc
tests/patches/: abseil-cpp.patch
tests/rust/: git2-rs-cargo-toml.patch  rules_rust.patch
tests/sanitizers/: BUILD.bazel  asan_example.cpp  sanitizer_test.sh  tsan_example.cpp  ubsan_example.cpp
tests/scripts/: archlinux_test.sh  bazel.sh  centos_test.sh  debian_test.sh  fedora_test.sh  linux_sysroot_test.sh  mac_test.sh  run_clang_cpp_test.sh  run_docker_exec_test.sh  run_external_tests.sh  run_msan_tests.sh  run_platforms_tests.sh  run_tests.sh  run_toolchain_tests.sh  run_xcompile_tests.sh  suse_leap_test.sh  suse_tumbleweed_test.sh  ubuntu_14_04_test.sh  ubuntu_16_04_test.sh  ubuntu_18_04_test.sh  ubuntu_20_04_test.sh  ubuntu_22_04_test.sh  ubuntu_install_libtinfo.sh  ubuntu_test.sh
tests/wasm/: BUILD.bazel
toolchain/: BUILD.bazel  BUILD.llvm_repo  BUILD.llvm_repo.tpl  BUILD.llvm_repo_windows  BUILD.llvm_repo_windows.tpl  BUILD.toolchain.tpl  BUILD.tpl  CROSSTOOL.tpl  Makevars.tpl  aliases.bzl  cc_toolchain_config.bzl  cc_toolchain_config.bzl.tpl  cc_wrapper.sh.tpl  cc_wrapper_inner.sh.tpl  configure.bzl  deps.bzl  extensions.bzl  host_libtool_wrapper.sh.tpl  llvm.bzl  llvm_release_name.py  osx_cc_wrapper.sh.tpl  osx_cc_wrapper_inner.sh.tpl  rules.bzl  setup_distributions.bzl  sysroot.bzl  toolchain.bzl  toolchains.bzl.tpl  unix_cc_toolchain_config.bzl  windows_cc_toolchain_config.bzl
toolchain/config/: BUILD.bazel
toolchain/distributions/: BUILD.bazel  extra.jsonc  github.jsonc  github_legacy.jsonc  pre_github.jsonc
toolchain/extensions/: distributions.bzl  llvm.bzl
toolchain/internal/: BUILD.bazel  common.bzl  configure.bzl  distributions_repo.bzl  extra_targets.bzl  gcc_toolchain.bzl  generate_system_module_map.sh  host_sysroot_directory.bzl  libxml2_stub.bzl  llvm_distribution_info.bzl  llvm_distributions.bzl  llvm_distributions.golden.out.txt  llvm_distributions.golden.sel.txt  llvm_distributions.golden.txt  llvm_distributions_select_no_error_test.sh  llvm_requirements_test.golden.txt  release_name.bzl  repo.bzl  sysroot.bzl  system_module_map.bzl  template.modulemap
toolchain/internal/extra_targets/: wasi.bzl
toolchain/tools/: BUILD.bazel  host_os_key.py  llvm_release_name.py
travis/: WORKSPACE
utils/: extra_distributions.sh  llvm_checksums.sh  update_distributions.sh
