module(
    name = "com_grail_bazel_toolchain",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "platforms", version = "0.0.6")
