# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":transitions.bzl", "dwp_file", "msan_flags_test", "sanitizer_test", "transition_library_to_platform")

cc_library(
    name = "stdlib",
    srcs = ["stdlib.cc"],
    hdrs = ["stdlib.h"],
)

# We want to emulate the behavior of cc_binary but be able to run the target as
# a test, so we use a cc_test target with linkstatic.
cc_test(
    name = "stdlib_test",
    srcs = ["stdlib_test.cc"],
    linkstatic = True,
    deps = [":stdlib"],
)

cc_test(
    name = "stdatomic_test",
    srcs = ["stdatomic_test.c"],
)

# We want to test a `.stripped` target to make sure `llvm-strip` can be called.
#
# For this we need `cc_binary`; `cc_test` does not create `.stripped` targets.
cc_binary(
    name = "stdlib_bin",
    srcs = ["stdlib_test.cc"],
    deps = [":stdlib"],
)

build_test(
    name = "stripped_binary_test",
    targets = [
        ":stdlib_bin.stripped",
    ],
)

build_test(
    name = "extra_files_extension_test",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    targets = [
        "@llvm_toolchain//:all-files-x86_64-linux",
    ],
)

# Verifies that extra_compiler_files actually makes the file available in the
# compile action sandbox. Uses -fsanitize-ignorelist pointing at the provisioned
# file; clang errors at compile time if the file is absent from the sandbox.
cc_test(
    name = "extra_files_compile_test",
    srcs = ["stdlib_test.cc"],
    copts = ["-fsanitize-ignorelist=$(execpath //extra_files:all_files)"],
    data = ["//extra_files:all_files"],
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:linux"],
    deps = [":stdlib"],
)

# Sanitizer support (rules_cc's stock asan/ubsan/tsan features, augmented by the
# toolchain with the C++ sanitizer runtime). The transition enables a single
# sanitizer via `--features` for the wrapped binary so the test runs regardless
# of the global build flags. Restricted to Linux, where the toolchain ships the
# sanitizer runtimes.
#
# Tagged `manual` so the default `bazel test //...`/`//:all` does not pick them
# up: the `container_test` job runs `//:all` against the pinned LLVM 13.0.0
# toolchain, whose sanitizer runtimes are too old for modern glibc (the asan
# dlsym alloc pool overflows: `asan_malloc_linux.cpp` CHECK on rolling-release
# distros). tests/scripts/run_tests.sh lists them explicitly for the default
# (modern) toolchain instead.
sanitizer_test(
    name = "asan_test",
    src = ":stdlib_bin",
    sanitizer = "asan",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:linux"],
)

sanitizer_test(
    name = "ubsan_test",
    src = ":stdlib_bin",
    sanitizer = "ubsan",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:linux"],
)

sanitizer_test(
    name = "tsan_test",
    src = ":stdlib_bin",
    sanitizer = "tsan",
    tags = ["manual"],
    target_compatible_with = ["@platforms//os:linux"],
)

# Analysis-only msan check: verifies the msan flags and instrumented-libc++
# include path are wired into the compile action. Runs against the default
# toolchain, so it does not need the instrumented libc++ overlay.
msan_flags_test(
    name = "msan_flags_test",
    target_compatible_with = ["@platforms//os:linux"],
    target_under_test = ":stdlib_bin",
)

# End-to-end msan test. Built and run with the instrumented-libc++ toolchain
# (@llvm_toolchain_msan) and --features=msan by tests/scripts/run_msan_tests.sh
# (the `msan` CI job). Tagged manual so the default `bazel test //...` does not
# build it with a non-msan toolchain; the script targets it explicitly. This
# links and runs an instrumented libc++, so it catches a non-instrumented
# libc++ being linked under msan, which msan_flags_test (analysis only) cannot.
cc_test(
    name = "msan_libcxx_test",
    srcs = ["msan_libcxx_test.cc"],
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# We want to test that `llvm-dwp` (used when assembling a `.dwp` file from
# `.dwo` files) can be called.
#
# `--fission=yes` enables this for all compilation modes but we also need to
# enable the `per_object_debug_info` feature manually because
# `unix_cc_toolchain_config.bzl`'s` `cc_toolchain_config` does not (see #109).
#
# Additionally, newer versions of clang (12+) require a non-zero `-g` setting to
# actually produce the `.dwo` files in addition to the `-gsplit-dwarf` flag. The
# feature in `unix_cc_toolchain_config.bzl` should be updated to reflect this
# and pass in an appropriate `-g` flag.
#
# bazelbuild/rules_cc#115 is a patch that does this
# (https://github.com/bazelbuild/rules_cc/pull/115).
#
# bazelbuild/bazel#14028 tracks this
# (https://github.com/bazelbuild/bazel/issues/14038).
#
# #109 in this repo and this comment
# (https://github.com/bazel-contrib/toolchains_llvm/pull/108#issuecomment-928839768)
# have some additional details.
#
# For now, we'll specify `-c dbg` when building `.dwo` and `.dwp` files.
#
# This (setting the fission flag, enabling the `per_object_debug_info` feature,
# and setting the compilation mode to `dbg`) is what `dwp_file` does using a
# transition.
#
# Unfortunately `per_object_debug_info` breaks on macOS which is why this target
# is marked as only being compatible with Linux (see #109).
dwp_file(
    name = "stdlib.dwp",
    src = ":stdlib_bin",
    # NOTE: we should eventually be able to drop this; see #109.
    override_compilation_mode = "dbg",
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)

build_test(
    name = "dwp_test",
    targets = [
        ":stdlib.dwp",
    ],
)

# Simple test in C that depends on libomp.
cc_test(
    name = "omp_test",
    srcs = ["omp_test.c"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    tags = ["manual"],
    deps = ["@llvm_toolchain//:omp"],
)

# C++ variant of omp_test; needed to check that including the llvm toolchain
# lib directory in the library search path (for including libomp.dylib) does
# not pick up unintentional static libraries in a way that breaks the binary.
# See note in cc_toolchain_config.bzl where we include -lc++ and -lc++abi for
# macOS.
cc_test(
    name = "omp_test_cc",
    srcs = ["omp_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    tags = ["manual"],
    deps = ["@llvm_toolchain//:omp"],
)

test_suite(
    name = "omp_tests",
    tags = ["manual"],
    tests = [
        ":omp_test",
        ":omp_test_cc",
    ],
)

sh_test(
    name = "file_dependency_test",
    srcs = ["file_dependency_test.sh"],
    args = [
        "$(rootpath @llvm_toolchain_llvm//:bin/clang-format)",
        "$(rootpaths @llvm_toolchain_llvm//:lib)",
    ],
    data = [
        "@llvm_toolchain_llvm//:bin/clang-format",
        "@llvm_toolchain_llvm//:lib",
    ],
)

# Verifies the `clang_cpp` target: compiles against the Clang/LLVM development
# headers and links libclang-cpp (which statically embeds LLVM). Compiled with
# `-fno-rtti` because the LLVM distribution is built without RTTI.
#
# Tagged `manual` so the default `bazel test //...` / `//:all` does not pick it
# up: libclang-cpp is only shipped by some distributions, so the target is empty
# on others (e.g. the pinned LLVM 13.0.0 used by the container tests) and would
# fail to link. The `clang_cpp_test` CI job (run_clang_cpp_test.sh) runs it
# explicitly in `-c opt` against the default (modern) toolchain on Ubuntu and
# macOS, mirroring the opt/host-opt configuration clang_cpp is consumed in.
cc_test(
    name = "clang_cpp_test",
    srcs = ["clang_cpp_test.cc"],
    copts = ["-fno-rtti"],
    linkstatic = True,
    tags = ["manual"],
    deps = ["@llvm_toolchain_llvm//:clang_cpp"],
)

# As a workaround for https://github.com/bazelbuild/rules_foreign_cc/issues/1018.
toolchain(
    name = "ninja_mac_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:arm64",
        "@platforms//os:macos",
    ],
    toolchain = "@ninja_mac//:ninja_tool",
    toolchain_type = "@rules_foreign_cc//toolchains:ninja_toolchain",
)

# Testing extra_target_compatible_with
constraint_setting(
    name = "cxx_standard",
    default_constraint_value = ":cxx17",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "cxx20",
    constraint_setting = ":cxx_standard",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "cxx17",
    constraint_setting = ":cxx_standard",
    visibility = ["//visibility:public"],
)

platform(
    name = "cxx20_platform",
    constraint_values = [
        ":cxx20",
    ],
    parents = ["@platforms//host"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "test_cxx_standard_lib",
    srcs = ["test_cxx_standard.cc"],
)

cc_test(
    name = "test_cxx_standard_is_17",
    size = "small",
    srcs = ["test_cxx_standard_main.cc"],
    args = ["201703"],
    deps = [":test_cxx_standard_lib"],
)

transition_library_to_platform(
    name = "test_cxx_standard_lib_transitioned",
    lib = ":test_cxx_standard_lib",
    platform = ":cxx20_platform",
)

cc_test(
    name = "test_cxx_standard_is_20",
    size = "small",
    srcs = ["test_cxx_standard_main.cc"],
    args = ["202002"],

    # Since some platforms require special toolchains (e.g. llvm 13.0.0) this
    # target won't build on those platforms unless we create a new toolchain per
    # platform with c++20. So instead just only run this test on platforms that
    # can use the default toolchain
    tags = ["manual"],
    deps = [":test_cxx_standard_lib_transitioned"],
)
