module(
    name = "openssl",
    version = "3.3.1.bcr.7",
    # We use overlay, which requires at least 7.2.1
    bazel_compatibility = [">=7.2.1"],
    # Note: This should rarely change. For now, we hold it as a constant.
    # Realistically, we should only change it if the major version of openssl changes.
    # When that happens, we probably want to change this to a single-digit number representing that version number.
    compatibility_level = 3030100,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_perl", version = "0.4.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "openssl-generated-overlay",
    integrity = "sha256-4RBLJl1SVyNTkyFQFunAnEPSF8EkPGj0Fjg/kKyhuL4=",
    url = "https://github.com/raccoons-build/bazel-openssl-cc/releases/download/3.3.1.bcr.7/bazel-openssl-cc-3.3.1.bcr.7.tar.gz",
)
